# seryvon

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.web  HANDOFF.md  NOTICE  README.md  alembic.ini  docker-compose.yml  header-notice.txt  pyproject.toml
.claude/: launch.json
.github/: landing-metrics.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 93fa419284ad_add_explanation_and_raw_value_to_issue.py  a7b8c9d0e1f2_issue_raw_value_to_jsonb.py  b1c2d3e4f5a6_aso_readiness_action_signals.py  b2c3d4e5f6a7_persist_coverage_fields.py  c2d3e4f5a6b7_widen_priority_bucket.py  c3d4e5f6a7b8_add_prompt_set_to_audit.py  d8ddd3948ee0_initial_schema_5_pillars_core.py  e5f6a7b8c9d0_add_api_key_table.py  f1a2b3c4d5e6_add_artifact_table.py
scripts/: generate_landing_metrics.py
src/seryvon/: __init__.py
src/seryvon/api/: __init__.py  main.py
src/seryvon/citation/: __init__.py  aggregate.py  connector.py  cost.py  engines.py  perplexity.py  promptset.py  tracking.py
src/seryvon/cli/: __init__.py  main.py
src/seryvon/connectors/: __init__.py  ai_discovery.py  dataforseo.py  gsc.py  openpagerank.py  pagespeed.py  serp.py  wikidata.py
src/seryvon/core/: __init__.py  audit.py  audit_cost.py  config.py  crypto.py  settings_resolver.py
src/seryvon/crawler/: __init__.py  crawl.py  discovery.py  extract.py  fetch.py  playwright_render.py  safety.py
src/seryvon/db/: __init__.py  base.py  models.py  repository.py
src/seryvon/i18n/: __init__.py  catalog.py
src/seryvon/models/: __init__.py  artifact.py  criterion.py  enums.py  llm.py  prompts.py  report.py  signals.py
src/seryvon/reporting/: __init__.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py
src/seryvon/scoring/: __init__.py  comparison.py  engine.py  issues.py  readiness.py
src/seryvon/storage/: __init__.py  base.py  factory.py  keys.py  memory.py  s3.py
src/seryvon/tasks/: __init__.py  app.py  audit.py  (+1 more)
tests/: conftest.py
tests/integration/: test_api.py  test_audit_flow.py  test_cli.py  test_repository.py
tests/unit/: test_ai_discovery.py  test_audit_cost.py  test_citation_aggregate.py  test_comparison.py  test_config.py  test_cost.py  test_crawl.py  test_crypto.py  test_dataforseo.py  test_discovery.py  test_engines.py  test_extract.py  test_fetch.py  test_gsc.py  test_html_report.py  test_issues.py  test_markdown_report.py  test_openpagerank.py  test_pagespeed.py  test_pdf_report.py  test_perplexity.py  test_playwright_render.py  test_promptset.py  test_readiness.py  test_rules_aeo.py  test_rules_aso.py  test_rules_authority.py  test_rules_geo.py  test_rules_gso.py  test_rules_perf.py  test_rules_seo.py  test_safety.py  test_scoring_engine.py  test_serp_connector.py  test_settings_resolver.py  test_storage.py  test_storage_factory.py  test_storage_s3.py  test_tasks_helpers.py  test_tracking.py  (+1 more)
web/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx
(+42 files in other folders)
